--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   dio: ^5.7.0
   json_annotation: ^4.9.0
   equatable: ^2.0.7
+  get_it: ^8.0.3
+  flutter_bloc: ^9.0.0
+  shimmer: ^3.0.0
 
 dev_dependencies:
   flutter_test:
@@ -78,10 +81,11 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
+  fonts:
+    - family: schwifty
+      fonts:
+        - asset: assets/fonts/get_schwifty.ttf
+          style: normal
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
   #   - family: Trajan Pro
